--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <style>
+        body {
+          background-image: url('vector-cartoon-landscape-illustration.jpg');
+          background-repeat: no-repeat;
+        }
+        </style>
 <h1>LiteBot Support</h1>
-<p>Discord: [Link](https://discord.gg/ZFeMQ2t)</p>
+<p><a href="https://discord.gg/ZFeMQ2t">Discord Link</a></p>
 </body>
 </html>
