--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         }
         </style>
 <h1>LiteBot Support</h1>
+<center>
 <p><a href="https://discord.gg/ZFeMQ2t">Discord Link</a></p>
+</center>
 </body>
 </html>
