--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body background="vector-cartoon-landscape-illustration.jpg">
 <center>
 <h1>LiteBot Support</h1>
 <p><a href="https://discord.gg/ZFeMQ2t">Discord Link</a></p>
