Re-uploaded image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body background="vector-cartoon-landscape-illustration.jpg">
 <center>
 <h1>LiteBot Support</h1>
-<p><img src="Disocrd-new-logo.png"><a href="https://discord.gg/ZFeMQ2t">Discord Link</a></p>
+<p><img src="Discord-new-logo.png"><a href="https://discord.gg/ZFeMQ2t">Discord Link</a></p>
 </center>
 </body>
 </html>
