--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body background="vector-cartoon-landscape-illustration.jpg">
+<body background="repeat.jpeg">
 <center>
 <h1>LiteBot Support</h1>
 <p><img src="discordlogo.png" width="30" height="30" align="center"><a href="https://discord.gg/ZFeMQ2t">Discord Link</a></p>
