--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="icon" 
+    type="image/png" 
+    href="https://cdn.discordapp.com/app-icons/714538050499117428/cd029e5d5b2f3f7250b874d7dea09189.png?size=512">
+</head>
 <body style="background-color: lightblue;">
 <center>
 <h1>LiteBot Support</h1>
