Added Patreon Link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body style="background-color: lightblue;">
 <center>
 <h1>LiteBot Support</h1>
-<p><img src="discordlogo.png" width="30" height="30" align="center"><a href="https://discord.gg/ZFeMQ2t">Discord Link</a></p>
+<p><img src="discordlogo.png" width="30" height="30" align="center"><a href="https://discord.gg/ZFeMQ2t">Discord</a></p>
+<p><img src="patreon1.png" width="25" height="25" align="center"><a href="https://www.patreon.com/litebot">Patreon</a></p>
 </center>
 </body>
 </html>
