--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: lightblue;">
 <center>
-<h1>LiteBot Support</h1>
+<h1>LiteBot</h1>
 <p><img src="discordlogo.png" width="30" height="30" align="center"><a href="https://discord.gg/ZFeMQ2t">Discord</a></p>
 <p><img src="patreon1.png" width="25" height="25" align="center"><a href="https://www.patreon.com/litebot">Patreon</a></p>
 </center>
