--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     type="image/png" 
     href="https://cdn.discordapp.com/app-icons/714538050499117428/cd029e5d5b2f3f7250b874d7dea09189.png?size=512">
 </head>
-<body style="background-color: lightblue;">
-<center>
-<h1>LiteBot</h1>
-<p><img src="discordlogo.png" width="30" height="30" align="center"><a href="https://discord.gg/ZFeMQ2t">Discord</a></p>
-<p><img src="patreon1.png" width="25" height="25" align="center"><a href="https://www.patreon.com/litebot">Patreon</a></p>
-</center>
+<body style="font-family: gamefont;">
+    <style>
+        @font-face {
+        font-family: 'gamefont';
+        src: url('./font2.ttf');
+    }
+</style>
+<h1><img src="verified2.png" height="35" width="35"><a href="https://krunker.io/social.html?p=profile&q=ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discordlogo.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h1>
+<br>
+<h2>Discord:</h2>
+<p>Bots</p>
+<p>Pfps</p>
+<p>Servers</p>
+<h2>Other:</h2>
+<p>WebSites</p>
+<p>Images</p>
+<p>Other</p>
+<h3>For Prices DM Me On Discord @ISIRK#0001</h3>
 </body>
 </html>
