--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         src: url('./font2.ttf');
     }
 </style>
-<h1><img src="verified2.png" height="35" width="35"><a href="https://krunker.io/social.html?p=profile&q=ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discordlogo.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h1>
+<h1><img src="verified2.png" height="35" width="35"><a href="https://krunker.io/social.html?p=profile&q=ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h1>
 <br>
 <h2>Discord:</h2>
 <p>Bots</p>
