--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="https://cdn.discordapp.com/app-icons/714538050499117428/cd029e5d5b2f3f7250b874d7dea09189.png?size=512">
+    href="Terminal.gif">
 </head>
 <body style="font-family: gamefont;">
     <style>
