--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" 
     type="image/png" 
     href="Terminal.gif">
+<title>ISIRK</title>
 </head>
 <body style="font-family: gamefont;">
     <style>
