--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         src: url('./font2.ttf');
     }
 </style>
-<h1><img src="verified2.png" height="35" width="35"><a href="https://krunker.io/social.html?p=profile&q=ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h1>
+<h2><img src="verified2.png" height="35" width="35"><a href="https://krunker.io/social.html?p=profile&q=ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
 <br>
-<h2>Discord:</h2>
+<h3>Things I Make:</h3>
+<h3>Discord:</h3>
 <p>Bots</p>
 <p>Pfps</p>
 <p>Servers</p>
-<h2>Other:</h2>
+<h3>Other:</h3>
 <p>WebSites</p>
 <p>Images</p>
 <p>Other</p>
