--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 <h2><img src="verified2.png" height="35" width="35"><a href="https://krunker.io/social.html?p=profile&q=ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
 <br>
 <h3>Things I Make:</h3>
-<h3>Discord:</h3>
-<p>Bots</p>
-<p>Pfps</p>
-<p>Servers</p>
-<h3>Other:</h3>
+<p>Discord Bots</p>
+<p>Discord Servers</p>
+<p>Profile Pics</p>
 <p>WebSites</p>
 <p>Images</p>
+<p>Gifs</p>
 <p>Other</p>
 <h3>For Prices DM Me On Discord @ISIRK#0001</h3>
 </body>
