--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 <p>Images</p>
 <p>Gifs</p>
 <p>Other</p>
-<h3>DM Me On Discord @ISIRK#0001</h3>
+<h3>DM Me On Discord At ISIRK#0001</h3>
 </body>
 </html>
