--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
         src: url('./font2.ttf');
     }
 </style>
-<h2><img src="verified2.png" height="35" width="35"><a href="https://krunker.io/social.html?p=profile&q=ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
+<h2><img src="terminal.gif" height="30" width="30"><a href="dsc.bio/isirk">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
 <br>
-<h3>Things I Make:</h3>
-<p>Discord Bots</p>
-<p>Discord Servers</p>
-<p>Profile Pics</p>
-<p>WebSites</p>
-<p>Images</p>
-<p>Gifs</p>
-<p>Other</p>
+<h3><a href="litebot.html">LiteBot</a></h3>
+<h3><a href="products.html">Things I Make</a></h3>
+<h3><a href="https://discord.gg/ZFeMQ2t">Discord Server</a></h3>
+<h3><a href="about.html">About Me<a></h3>
+<h3><a href="https://dsc.bio/isirk">Discord Bio</a></h3>
 <h3>DM Me On Discord At ISIRK#0001</h3>
-</body>
 </html>
