--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         src: url('./font2.ttf');
     }
 </style>
-<h2><img src="terminal.gif" height="30" width="30"><a href="index.html">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
+<h2><img src="terminal.gif" height="30" width="30"><a href="/">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
 <br>
 <h3>About Me</h3>
 <p>Hi! I'm ISIRK,</p>
