Changes. Also Added Brave Browser Verification.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="Terminal.gif">
+    href="terminal.gif">
 <title>ISIRK</title>
 </head>
 <body style="font-family: gamefont;">
@@ -17,9 +17,10 @@
 <br>
 <h3>About Me</h3>
 <p>Hi! I'm ISIRK,</p>
-<p>I am a freelance coder and gfx designer. I make discord bots and gfx images.</p>
-<p>I also make websites and other stuff. You can see all the stuff I make <a href="products.html">here.</a></p>
-<p>My Discord Bio is <a href="https://dsc.bio/isirk">here.</a></p>
+<p>I am a freelance coder and gfx designer</p> 
+<p>I make discord bots, websites, gfx images and other stuff</p>
+<p>-You can see all the stuff I make <a href="products.html">here</a></p>
+<p>-And My Discord Bio is <a href="https://dsc.bio/isirk">here</a></p>
 <p>For Business work email me at isirk@asksirk.com or DM me on Discord at ISIRK#0001</p>
 </body>
 </html>
