--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="Terminal.gif">
+    href="terminal.gif">
 <title>ISIRK</title>
 </head>
 <body style="font-family: gamefont;">
@@ -17,8 +17,8 @@
 <br>
 <h3><a href="litebot.html">LiteBot</a></h3>
 <h3><a href="products.html">Things I Make</a></h3>
-<h3><a href="https://discord.gg/ZFeMQ2t">Discord Server</a></h3>
 <h3><a href="about.html">About Me<a></h3>
 <h3><a href="https://dsc.bio/isirk">Discord Bio</a></h3>
+<h3><a href="https://discord.gg/ZFeMQ2t">Discord Server</a></h3>
 <h3>DM Me On Discord At ISIRK#0001</h3>
 </html>
