--- a/litebot.html
+++ b/litebot.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="Terminal.gif">
+    href="terminal.gif">
 <title>ISIRK</title>
 </head>
 <body style="font-family: gamefont;">
@@ -21,7 +21,7 @@
 <p>-User Info</p>
 <p>-Mod Commands</p>
 <p>-And More!</p>
-<p>Unfortunately LiteBot is still in Beta so it is not open to public use for now.</p>
+<p>Unfortunately LiteBot is still in Beta so it is not open to public use for now</p>
 <p>You can test out the bot in our discord server <a href="https://discord.gg/ZFeMQ2t">here</a></p>
 <h3>DM Me On Discord At ISIRK#0001</h3>
 </body>
