--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="Terminal.gif">
+    href="terminal.gif">
 <title>ISIRK</title>
 </head>
 <body style="font-family: gamefont;">
