--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         src: url('./font2.ttf');
     }
 </style>
-<h2><img src="Terminal.gif" height="30" width="30"><a href="https://krunker.link/ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
+<h2><img src="Terminal.gif" height="30" width="30"><a href="https://krunker.link/ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a><a href="https://github.com/ISIRK"><img src="github.png" height="25" width="25"></a></h2>
 <br>
 <h3><a href="litebot.html">LiteBot</a></h3>
 <h3><a href="products.html">Things I Make</a></h3>
