--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
         src: url('./font2.ttf');
     }
 </style>
-<h2><img src="Terminal.gif" height="30" width="30"><a href="https://krunker.link/ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a><a href="https://github.com/ISIRK"><img src="github.png" height="25" width="25"></a></h2>
+<style>
+    body {
+      background-color: #1d2b4b;
+    }
+  </style>
+<style>
+    body {
+        color: white;
+    }
+    </style>
+<body link=white alink=white vlink=white></body>
+<h2><img src="Terminal.gif" height="30" width="30"><a href="https://krunker.link/ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
 <h3><a href="litebot.html">LiteBot</a></h3>
 <h3><a href="products.html">Things I Make</a></h3>
@@ -21,4 +32,5 @@
 <h3><a href="https://dsc.bio/isirk">Discord Bio</a></h3>
 <h3><a href="https://discord.gg/ZFeMQ2t">Discord Server</a></h3>
 <h3>DM Me On Discord At ISIRK#0001</h3>
+</body>
 </html>
