--- a/litebot.html
+++ b/litebot.html
@@ -13,7 +13,18 @@
         src: url('./font2.ttf');
     }
 </style>
-<h2><img src="Terminal.gif" height="30" width="30"><a href="/">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="discord4.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter.png" width="30" height="30" align="center"></a></h2>
+<style>
+    body {
+      background-color: #171c28;
+    }
+  </style>
+<style>
+    body {
+        color: white;
+    }
+    </style>
+<body link=white alink=white vlink=white></body>
+<h2><img src="Terminal.gif" height="30" width="30"><a href="/">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
 <h3>LiteBot</h3>
 <p>LiteBot is a Multi-functional discord bot with:</p>
