--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="Terminal.gif">
+    href="bluemask1.png">
 <title>ISIRK</title>
 </head>
 <body style="font-family: gamefont;">
@@ -24,7 +24,7 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<h2><img src="Terminal.gif" height="30" width="30"><a href="https://krunker.link/ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
+<h2><img src="blueterminalmask.gif" height="30" width="30"><a href="https://krunker.link/ISIRK">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
 <h3><a href="litebot.html">LiteBot</a></h3>
 <h3><a href="products.html">Things I Make</a></h3>
