--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
 <body link=white alink=white vlink=white></body>
 <h2><img src="isirkterminal.gif" height="30" width="30"><a href="/">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
-<h3>Things I Make:</h3>
+<h3>Things I Make</h3>
 <p>-Discord Bots</p>
 <p>-Discord Servers</p>
 <p>-Profile Pics</p>
@@ -34,7 +34,6 @@
 <p>-Images</p>
 <p>-Gifs</p>
 <p>-Other</p>
-<h3>For Prices</h3>
 <h3>DM Me On Discord At ISIRK#0001</h3>
 </body>
 </html>
