--- a/resources.html
+++ b/resources.html
@@ -26,13 +26,12 @@
 <body link=white alink=white vlink=white></body>
 <h2><img src="isirkterminal.gif" height="30" width="30"><a href="/">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
-<h3>About Me</h3>
-<p>Hi! I'm ISIRK,</p>
-<p>I am a freelance coder and gfx designer</p> 
-<p>I make discord bots, websites, gfx images and other stuff</p>
-<p>-You can see all the stuff I make <a href="products.html">here</a></p>
-<p>-The things I use <a href="resources.html">here</a></p>
-<p>-And My Discord Bio <a href="https://dsc.bio/isirk">here</a></p>
-<p>For Business either email me at isirk@asksirk.com or DM me on Discord at ISIRK#0001</p>
+<h3>Resources</h3>
+<p>-<a href="https://discord.com/">Discord</a></p>
+<p>-<a href="https://www.lunarclient.com/">Lunar Client(Minecraft)</a></p>
+<p>-<a href="https://brave.com/">Brave Browser</a></p>
+<p>-<a href="https://pixlr.com/">Pixlr(Photos)</a></p>
+<p>-<a href="https://code.visualstudio.com/">VSCode(Code)</a></p>
+<p>Quesions? DM me on Discord @ ISIRK#0001</p>
 </body>
 </html>
