--- a/litebot.html
+++ b/litebot.html
@@ -34,6 +34,7 @@
 <p>-And More!</p>
 <p>Unfortunately LiteBot is still in Beta so it is not open to public use for now</p>
 <p>You can test out the bot in our discord server <a href="https://discord.gg/ZFeMQ2t">here</a></p>
+<p>If you would like to see the code or make changes to it go <a href="https://github.com/ISIRK/lighthousebot">here</a></p>
 <h3>DM Me On Discord At ISIRK#0001</h3>
 </body>
 </html>
