--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <h3><a href="products.html">Things I Make</a></h3>
 <h3><a href="resources.html">Resources</a></h3>
 <h3><a href="about.html">About Me<a></h3>
-<h3><a href="https://discord.gg/ZFeMQ2t">Discord Server</a></h3>
+<h3><a href="https://discord.com/invite/s5ZPSRe">Discord Server</a></h3>
 </body>
 </html>
