--- a/litebot.html
+++ b/litebot.html
@@ -32,9 +32,12 @@
 <p>-User Info</p>
 <p>-Mod Commands</p>
 <p>And More!</p>
+<h3><a href="privacy.html">Privacy Policy</a></h3>
 <p>Discord Bot List: <a href="https://discord.ly/lite">Lite Bot</a></p>
 <p>Top.gg: Listing Coming Soon</p>
-<p>You can test out the bot in our discord server <a href="https://discord.gg/ZFeMQ2t">here</a></p>
+<p>Bots On Discord: Coming Soon</p>
+<p>You can test out the bot in our discord server <a href="https://discord.com/invite/s5ZPSRe">here</a></p>
 <h3>DM Me On Discord At ISIRK#0001</h3>
+<p><a href=""</p>
 </body>
 </html>
