--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<h2><a href="/">Privacy Policy</a></h2>
+<h2>Privacy Policy</h2>
 <br>
 <p>Lite Bot takes your privacy very seriously.</p>
 <p>We only store data that is necessary to the operation of Starry, like user IDs, guild IDs, role IDs, and channel IDs. </p>
