--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
 <h2>Privacy Policy</h2>
 <br>
 <p>Lite Bot takes your privacy very seriously.</p>
-<p>We only store data that is necessary to the operation of Starry, like user IDs, guild IDs, role IDs, and channel IDs. </p>
+<p>We only store data that is necessary to the operation of Lite Bot, like user IDs, guild IDs, role IDs, and channel IDs. </p>
 <p>Lite Bot accesses more extensive data on users, roles, guilds, and channels when certain commands are run, but it is not stored.</p>
 <p>If you wish for your data to be removed either DM me @ ISIRK#0001 or kick/ban the bot from your server.</p>
 <br>
