--- a/litebot.html
+++ b/litebot.html
@@ -32,6 +32,7 @@
 <p>-User Info</p>
 <p>-Mod Commands</p>
 <p>And More!</p>
+<p><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8">Invite Link</a></p>
 <h3><a href="privacy.html">Privacy Policy</a></h3>
 <p>You can test out the bot in our discord server <a href="https://discord.com/invite/s5ZPSRe">here</a></p>
 <h3>DM Me On Discord At ISIRK#0001</h3>
