Making a new LiteBot page

--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
     <link rel="icon" 
     type="image/png" 
     href="bluemask1.png">
-<title>ISIRK</title>
+<title>Privacy Policy</title>
 </head>
 <body style="font-family: gamefont;">
     <style>
