--- a/test.html
+++ b/test.html
@@ -24,17 +24,28 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<h2><img src="isirkterminal.gif" height="30" width="30"><a href="/">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
+<h3><a href="/">LiteBot</a></h3>
+<br><br><br><br><br><br><br>
+<center><h2>LiteBot</h2></center>
 <br>
-<h3>LiteBot</h3>
-<p>LiteBot is a Multi-functional discord bot with:</p>
-<p>-Server Stats</p>
-<p>-User Info</p>
-<p>-Mod Commands</p>
-<p>And More!</p>
+<center><h3>Never Worry about anything except typing.</h3>
+<br>
+<a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8">Add to Discord</a>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<center>
+<h2>Features:</h2>
+<br>
+<h3>-Reaction Roles</h3>
+<h3>-Server Stats</h3>
+<h3>-User Info</h3>
+<h3>-Mod Commands</h3>
+<h3>-Fun Commands</h3>
+<h3>And More!</h3>
+</center>
 <p><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8">Invite Link</a></p>
 <h3><a href="privacy.html">Privacy Policy</a></h3>
 <p>You can test out the bot in our discord server <a href="https://discord.com/invite/s5ZPSRe">here</a></p>
 <h3>DM Me On Discord At ISIRK#0001</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
