--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a>
 <br><br><br><br><br>
 <center>
-<video width="900" height="700" autoplay>
+<video width="900" height="700" controls>
     <source src="*help.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
