--- a/index.html
+++ b/index.html
@@ -41,43 +41,43 @@
 <h2>Features</h2>
 <div class="row justify-content-center features">
     <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #23272A;"><img src="mod.png" height="50" width="50">
+    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="mod.png" height="50" width="50">
     <h3 class="name">Moderation</h3>
     <p class="description" style="color: #ddd;">Lite Bot has powerful moderation and modlog commands.</p>
     </div>
     </div>
     <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #23272A;"><img src="controller.png" height="50" width="50">
+    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="controller.png" height="50" width="50">
     <h3 class="name">Fun</h3>
     <p class="description" style="color: #ddd;">Lite Bot offers interactive and fun commands to entertain your members.</p>
     </div>
     </div>
     <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #23272A;"><img src="module_64px.png" height="50" width="50">
+    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="module_64px.png" height="50" width="50">
     <h3 class="name">Modules</h3>
     <p class="description" style="color: #ddd;">Lite Bot has a module function called cogs. You can request cogs by joining our support server <a href="https://discord.com/invite/s5ZPSRe">here</a></p>
     </div>
     </div>
     <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #23272A;"><img src="customizeable.png" height="50" width="50">
+    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="customizeable.png" height="50" width="50">
     <h3 class="name">Customizable</h3>
     <p class="description" style="color: #ddd;">ModeratorBot provides you with a command that allows you to change its prefix and many other things.</p>
     </div>
     </div>
     <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #23272A;"><img src="role.png" height="50" width="50">
+    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="role.png" height="50" width="50">
     <h3 class="name">Roles</h3>
     <p class="description" style="color: #ddd;">Lite Bot has Role Management Commands including Selfrole, Autorole, and Reaction Roles.</p>
     </div>
     </div>
     <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #23272A;"><img src="tools.png" height="50" width="50">
+    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="tools.png" height="50" width="50">
     <h3 class="name">Management</h3>
     <p class="description" style="color: #ddd;">Lite Bot can help you to manage your server easily with help commands for everything.</p>
     </div>
     </div>
     <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #23272A;"><img src="blurple.png" height="50" width="50">
+    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="blurple.png" height="50" width="50">
     <h3 class="name">Blurplefy</h3>
     <p class="description" style="color: #ddd;">Lite Bot has a command that lets you Blurplefy your profile picture or someons elses profile picture.</p>
     </div>
