Added WIdget Bot

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         src: url('./font2.ttf');
     }
 </style>
+<meta name="description" content="Lite Bot is a versatile Discord bot with moderation, fun, welcome messages, reactio roles and more!">
 <style>
     body {
       background-color: #1d2b4b;
@@ -33,6 +34,12 @@
 <a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a>
 <br><br><br><br><br>
 <center>
+    <widgetbot
+    server="723310191277506643"
+    channel="742517862203260939"
+    width="800"
+    height="600"
+></widgetbot>
 <video width="900" height="700" controls>
     <source src="*help.mp4" type="video/mp4">
   Your browser does not support the video tag.
