--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     width="800"
     height="600"
 ></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 <video width="900" height="700" controls>
     <source src="*help.mp4" type="video/mp4">
   Your browser does not support the video tag.
