--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
 <a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a>
 <br><br><br><br><br>
 <center>
-    <widgetbot
-    server="723310191277506643"
-    channel="742517862203260939"
-    width="800"
-    height="600"
-></widgetbot>
+    <iframe src="https://e.widgetbot.io/channels/723310191277506643/742517862203260939" height="600" width="800"></iframe>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 <video width="900" height="700" controls>
     <source src="*help.mp4" type="video/mp4">
