--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
 <a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a>
 <br><br><br><br><br>
 <center>
-    <iframe src="https://e.widgetbot.io/channels/723310191277506643/742517862203260939" height="600" width="800"></iframe>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
-<video width="900" height="700" controls>
-    <source src="*help.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-  </video>
-<br><br>
+<h2>Test the Bot Out</h2>
+    <widgetbot
+    server="723310191277506643"
+    channel="742517862203260939"
+    width="800"
+    height="600"
+  ></widgetbot>
+  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
+
+
+  <br><br><br>
 <h2>Features</h2>
 <div class="row justify-content-center features">
     <div class="col-sm-6 col-md-5 col-lg-4 item">
@@ -82,7 +87,7 @@
     <div class="col-sm-6 col-md-5 col-lg-4 item">
     <div class="border rounded box" style="background-color: #1d2b4b;"><img src="blurple.png" height="50" width="50">
     <h3 class="name">Blurplefy</h3>
-    <p class="description" style="color: #ddd;">Lite Bot has a command that lets you Blurplefy your profile picture or someons elses profile picture.</p>
+    <p class="description" style="color: #ddd;">Lite Bot has a command that lets you Blurplefy your profile picture or someone elses profile picture.</p>
     </div>
     </div>
     </div>
