--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <center><h3>Never Worry about anything except typing...</h3>
 <br>
 <a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a>
-<br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
 <center>
 <h2>Test the Bot Out</h2>
     <widgetbot
@@ -45,7 +45,7 @@
 
 
 
-  <br><br><br>
+  <br><br><br><br><br>
 <h2>Features</h2>
 <div class="row justify-content-center features">
     <div class="col-sm-6 col-md-5 col-lg-4 item">
@@ -95,14 +95,16 @@
 <br><br><br><br>
 <p><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a></p>
 <br><br><br><br>
-<div class="footer-basic" style="background-color: #1d2b4b;color: #fff;">
+<div class="footer-basic" style="background-color: #23272A;color: #fff;">
     <footer>
+        <br><br>
     <a href="/">Home</a></li>
     </li><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8">Invite</a></li>
     <a href="https://discord.com/invite/s5ZPSRe">Support</a></li>
     <a href="privacy.html">Privacy Policy</a></li>
     </ul>
     <p class="copyright" style="font-size: 20px;">2020 Lite Bot by&nbsp;ISIRK#0001 All Rights Reserved</p>
+        <br><br>
     </footer>
     </div>
 </center>
