--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         src: url('./font2.ttf');
     }
 </style>
-<meta name="description" content="Lite Bot is a versatile Discord bot with moderation, fun, welcome messages, reactio roles and more!">
+<meta name="description" content="Lite Bot is a multi-functional Discord bot with moderation, fun, welcome messages, reaction roles and more!">
 <style>
     body {
       background-color: #1d2b4b;
