--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a>
 <br><br><br><br><br><br><br><br><br><br>
 <center>
-<h2>Test the Bot Out</h2>
+<h2>Test Lite Bot Out</h2>
     <widgetbot
     server="723310191277506643"
     channel="742517862203260939"
