--- a/privacy.html
+++ b/privacy.html
@@ -31,6 +31,6 @@
 <p>Lite Bot accesses more extensive data on users, roles, guilds, and channels when certain commands are run, but it is not stored.</p>
 <p>If you wish for your data to be removed either DM me @ ISIRK#0001 or kick/ban the bot from your server.</p>
 <br>
-<h3><a href="litebot.html">Back</a></h3>
+<h3><a href="/">Back</a></h3>
 </body>
 </html>
