--- a/about.html
+++ b/about.html
@@ -30,9 +30,7 @@
 <p>Hi! I'm ISIRK,</p>
 <p>I am a freelance coder and gfx designer</p> 
 <p>I make discord bots, websites, gfx images and other stuff</p>
-<p>-You can see all the stuff I make <a href="products.html">here</a></p>
-<p>-The things I use <a href="resources.html">here</a></p>
-<p>-And My Discord Bio <a href="https://dsc.bio/isirk">here</a></p>
+<p>-You can see My Discord Bio <a href="https://dsc.bio/isirk">here</a></p>
 <p>For Business either email me at isirk@asksirk.com or DM me on Discord at ISIRK#0001</p>
 </body>
 </html>
