--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
     <a href="https://discord.com/invite/s5ZPSRe">Support</a></li>
     <a href="privacy.html">Privacy Policy</a></li>
     </ul>
-    <p class="copyright" style="font-size: 20px;">2020 Lite Bot by&nbsp;ISIRK#0001 All Rights Reserved</p>
+    <br>
+    <p class="copyright" style="font-size: 20px;">Copyright © 2020 <a href="about.html">ISIRK</a> All rights reserved.</p>
         <br><br>
     </footer>
     </div>
