--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
     <a href="privacy.html">Privacy Policy</a></li>
     </ul>
     <br>
-    <p class="copyright" style="font-size: 20px;">Copyright © 2020 <a href="about.html">ISIRK</a> All rights reserved.</p>
-        <br><br>
+    <p class="copyright" style="font-size: 20px;">Copyright © 2020 LiteBot All rights reserved.</p>
+        <h3>ISIRK#0001</h3>
+        <br>
     </footer>
     </div>
 </center>
