--- a/old.html
+++ b/old.html
@@ -24,7 +24,7 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<h2><img src="isirkterminal.gif" height="30" width="30">ISIRK<a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
+<h2><img src="isirkterminal.gif" height="30" width="30">Isaac<a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
 <h3><a href="litebot.html">LiteBot</a></h3>
 <h3><a href="about.html">About Me<a></h3>
