--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </ul>
     <br>
     <p class="copyright" style="font-size: 20px;">Copyright © 2020 LiteBot All rights reserved.</p>
-        <h3>Isirk#0001</h3>
+        <h3>Isaac#0005</h3>
         <br>
     </footer>
     </div>
