Added Invite and support link

--- a/index.html
+++ b/index.html
@@ -25,8 +25,23 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<h3><a href="https://discord.com/invite/s5ZPSRe">LiteBot</a></h3>
-<br><br><br><br><br><br><br>
+<style>
+    .alignleft {
+        float: left;
+    }
+    .alignright {
+        float: right;
+    }
+    .alignsupport {
+    float: right;
+}
+</style>
+<body>
+    <div id="textbox">
+        <h3 class="alignleft"><a href="https://discord.com/invite/s5ZPSRe">LiteBot</a></h3>
+        <h3 class="alignright"><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8">Invite</a> <a href="https://discord.com/invite/s5ZPSRe">Support</a></h3>
+    </div>
+<br><br><br><br><br><br><br><br><br><br>
 <center><h2>LiteBot</h2></center>
 <br>
 <center><h3>Never Worry about anything except typing...</h3>
