--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         color: white;
     }
     </style>
-<body link=white alink=white vlink=white></body>
+<body link=white alink=white vlink=white underlie ></body>
 <style>
     .alignleft {
         float: left;
@@ -38,8 +38,8 @@
 </style>
 <body>
     <div id="textbox">
-        <h3 class="alignleft"><a href="https://discord.com/invite/s5ZPSRe">LiteBot</a></h3>
-        <h3 class="alignright"><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8">Invite</a> <a href="https://discord.com/invite/s5ZPSRe">Support</a></h3>
+        <h3 class="alignleft">LiteBot</h3>
+        <h3 class="alignright"><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a> <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></h3>
     </div>
 <br><br><br><br><br><br><br><br><br><br>
 <center><h2>LiteBot</h2></center>
@@ -113,12 +113,12 @@
 <div class="footer-basic" style="background-color: #23272A;color: #fff;">
     <footer>
         <br><br>
-    <a href="/">Home</a></li>
-    </li><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8">Invite</a></li>
-    <a href="https://discord.com/invite/s5ZPSRe">Support</a></li>
-    <a href="privacy.html">Privacy Policy</a></li>
+    <a href="/" style="text-decoration:none">Home</a></li>
+    </li><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a></li>
+    <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></li>
+    <a href="privacy.html" style="text-decoration:none">Privacy Policy</a></li>
     </ul>
-    <br>
+    <br><br>
     <p class="copyright" style="font-size: 20px;">Copyright © 2020 LiteBot All rights reserved.</p>
         <h3>Isaac#0005</h3>
         <br>
