--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </style>
 <body>
     <div id="textbox">
-        <h3 class="alignleft">LiteBot</h3>
+        <h3 class="alignleft"><a href="https://asksirk.com" style="text-decoration:none">LiteBot</a></h3>
         <h3 class="alignright"><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a> <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></h3>
     </div>
 <br><br><br><br><br><br><br><br><br><br>
