--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </ul>
     <br><br>
     <p class="copyright" style="font-size: 20px;">Copyright © 2020 LiteBot All rights reserved.</p>
-        <h3>Isaac#0005</h3>
+        <h3>ISIRK#0001</h3>
         <br>
     </footer>
     </div>
