--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <div class="footer-basic" style="background-color: #23272A;color: #fff;">
     <footer>
         <br><br>
-    <a href="/" style="text-decoration:none">Home</a></li>
+    <a href="home.html" style="text-decoration:none">Home</a></li>
     </li><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a></li>
     <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></li>
     <a href="privacy.html" style="text-decoration:none">Privacy Policy</a></li>
