--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" 
     type="image/png" 
     href="bluemask1.png">
-<title>Lite Bot</title>
+<title>ISIRK</title>
 </head>
 <body style="font-family: gamefont;">
     <style>
@@ -13,7 +13,6 @@
         src: url('./font2.ttf');
     }
 </style>
-<meta name="description" content="Lite Bot is a multi-functional Discord bot with moderation, fun, welcome messages, reaction roles and more!">
 <style>
     body {
       background-color: #1d2b4b;
@@ -24,106 +23,11 @@
         color: white;
     }
     </style>
-<body link=white alink=white vlink=white underlie ></body>
-<style>
-    .alignleft {
-        float: left;
-    }
-    .alignright {
-        float: right;
-    }
-    .alignsupport {
-    float: right;
-}
-</style>
-<body>
-    <div id="textbox">
-        <h3 class="alignleft"><a href="https://asksirk.com" style="text-decoration:none">LiteBot</a></h3>
-        <h3 class="alignright"><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a> <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></h3>
-    </div>
-<br><br><br><br><br><br><br><br><br><br>
-<center><h2>LiteBot</h2></center>
+<body link=white alink=white vlink=white></body>
+<h2><img src="isirkterminal.gif" height="30" width="30">ISIRK<a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
-<center><h3>Never Worry about anything except typing...</h3>
-<br>
-<a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a>
-<br><br><br><br><br><br><br><br><br><br>
-<center>
-<h2>Test Lite Bot Out</h2>
-    <widgetbot
-    server="723310191277506643"
-    channel="742517862203260939"
-    width="800"
-    height="600"
-  ></widgetbot>
-  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
-
-
-
-  <br><br><br><br><br>
-<h2>Features</h2>
-<div class="row justify-content-center features">
-    <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="mod.png" height="50" width="50">
-    <h3 class="name">Moderation</h3>
-    <p class="description" style="color: #ddd;">Lite Bot has powerful moderation and modlog commands.</p>
-    </div>
-    </div>
-    <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="controller.png" height="50" width="50">
-    <h3 class="name">Fun</h3>
-    <p class="description" style="color: #ddd;">Lite Bot offers interactive and fun commands to entertain your members.</p>
-    </div>
-    </div>
-    <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="module_64px.png" height="50" width="50">
-    <h3 class="name">Modules</h3>
-    <p class="description" style="color: #ddd;">Lite Bot has a module function called cogs. You can request cogs by joining our support server <a href="https://discord.com/invite/s5ZPSRe">here</a></p>
-    </div>
-    </div>
-    <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="customizeable.png" height="50" width="50">
-    <h3 class="name">Customizable</h3>
-    <p class="description" style="color: #ddd;">ModeratorBot provides you with a command that allows you to change its prefix and many other things.</p>
-    </div>
-    </div>
-    <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="role.png" height="50" width="50">
-    <h3 class="name">Roles</h3>
-    <p class="description" style="color: #ddd;">Lite Bot has Role Management Commands including Selfrole, Autorole, and Reaction Roles.</p>
-    </div>
-    </div>
-    <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="tools.png" height="50" width="50">
-    <h3 class="name">Management</h3>
-    <p class="description" style="color: #ddd;">Lite Bot can help you to manage your server easily with help commands for everything.</p>
-    </div>
-    </div>
-    <div class="col-sm-6 col-md-5 col-lg-4 item">
-    <div class="border rounded box" style="background-color: #1d2b4b;"><img src="blurple.png" height="50" width="50">
-    <h3 class="name">Blurplefy</h3>
-    <p class="description" style="color: #ddd;">Lite Bot has a command that lets you Blurplefy your profile picture or someone elses profile picture.</p>
-    </div>
-    </div>
-    </div>
-</center>
-<br><br><br><br>
-<p><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8"><img src="Screen Shot 2020-08-14 at 10.45.58 AM.png" height="200" width="200"></a></p>
-<br><br><br><br>
-<div class="footer-basic" style="background-color: #23272A;color: #fff;">
-    <footer>
-        <br><br>
-    <a href="home.html" style="text-decoration:none">Home</a></li>
-    </li><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a></li>
-    <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></li>
-    <a href="privacy.html" style="text-decoration:none">Privacy Policy</a></li>
-    </ul>
-    <br><br>
-    <p class="copyright" style="font-size: 20px;">Copyright © 2020 LiteBot All rights reserved.</p>
-        <h3>ISIRK#0001</h3>
-        <br>
-    </footer>
-    </div>
-</center>
+<h3><a href="https://asksirk.com/lite/">LiteBot</a></h3>
+<h3><a href="about.html">About Me<a></h3>
+<h3><a href="https://discord.com/invite/s5ZPSRe">Discord Server</a></h3>
 </body>
 </html>
