--- a/lite/index.html
+++ b/lite/index.html
@@ -38,7 +38,7 @@
 </style>
 <body>
     <div id="textbox">
-        <h3 class="alignleft"><a href="https://asksirk.com" style="text-decoration:none">LiteBot</a></h3>
+        <h3 class="alignleft"><a href="/" style="text-decoration:none">Home</a></h3>
         <h3 class="alignright"><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a> <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></h3>
     </div>
 <br><br><br><br><br><br><br><br><br><br>
@@ -113,10 +113,10 @@
 <div class="footer-basic" style="background-color: #23272A;color: #fff;">
     <footer>
         <br><br>
-    <a href="https://asksirk.com/" style="text-decoration:none">Home</a></li>
+    <a href="/" style="text-decoration:none">Home</a></li>
     </li><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a></li>
     <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></li>
-    <a href="privacy.html" style="text-decoration:none">Privacy Policy</a></li>
+    <a href="/privacy/" style="text-decoration:none">Privacy Policy</a></li>
     </ul>
     <br><br>
     <p class="copyright" style="font-size: 20px;">Copyright © 2020 LiteBot All rights reserved.</p>
