--- a/about/index.html
+++ b/about/index.html
@@ -24,13 +24,16 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<h2><img src="isirkterminal.gif" height="30" width="30"><a href="/">ISIRK</a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
+<h2><img src="isirkterminal.gif" height="30" width="30"><a href="/"style="text-decoration:none">ISIRK </a><a href="https://discord.gg/ZFeMQ2t"><img src="whitediscord.png" width="30" height="30" align="center"></a><a href="https://twitter.com/IsaacSirkin"><img src="twitter-xxl.png" width="25" height="25" align="center"></a><a href="https://github.com/ISIRK"><img src="whitegithub.png" height="35" width="35" align="center"></a></h2>
 <br>
 <h3>About Me</h3>
 <p>Hi! I'm Isaac,</p>
 <p>I am a freelance coder and gfx designer</p> 
 <p>I make discord bots, websites, gfx images and other stuff</p>
-<p>-You can see My Discord Bio <a href="https://dsc.bio/isirk">here</a></p>
+<p>I made <a href="/lite/">LiteBot</a></p>
+<p>-You can see LiteBots listing <a href="https://discord.ly/lite">here</a></p>
+<p>-My <a href="https://discord.com/invite/s5ZPSRe">Discord Server</a></p>
+<p>-And My Discord Bio <a href="https://dsc.bio/isirk">here</a></p>
 <p>For Business either email me at isirk@asksirk.com or DM me on Discord at ISIRK#0001</p>
 </body>
 </html>
