--- a/privacy/index.html
+++ b/privacy/index.html
@@ -29,7 +29,11 @@
 <p>Lite Bot takes your privacy very seriously.</p>
 <p>We only store data that is necessary to the operation of Lite Bot, like user IDs, guild IDs, role IDs, and channel IDs. </p>
 <p>Lite Bot accesses more extensive data on users, roles, guilds, and channels when certain commands are run, but it is not stored.</p>
-<p>If you wish for your data to be removed either DM me @ Isaac#0005 or kick/ban the bot from your server.</p>
+<br>
+<p>If you wish to see what data is being recorded;</p>
+<p>- Type this in chat: '[p]mydata 3rdparty'</p>
+<p>If you wish for your data to be removed;</p>
+<p>- Type this in chat: '[prefix]mydata forgetme'</p>
 <br>
 <h3><a href="/lite/">Back</a></h3>
 </body>
