--- a/Astro/index.html
+++ b/Astro/index.html
@@ -5,7 +5,7 @@
     type="image/png" 
     href="DE_IconBot (1).png">
 <title>Astro - A Utilities Bot for Discord</title>
-<meta name="description" content="Astro Bot - A Utilities Discord Bot with reliability and simplicity">
+<meta name="description" color=#7289DA content="Astro Bot - A Utilities Discord Bot with reliability and simplicity">
 </head>
 <body style="font-family: gamefont;">
     <style>
