--- a/Astro/privacy.html
+++ b/Astro/privacy.html
@@ -27,11 +27,15 @@
 <body link=white alink=white vlink=white></body>
 <br><br><br><br>
 <center>
-    <img src="ASTROYES.png" height="300" width="300">
-    <h2>Astro</h2>
-    <h3>A Utilities Discord Bot with reliability and simplicity</h3>
-    <a href="https://github.com/ISIRK/Astro"><img src="whitegithub.png" height="50" width="50"></a><a href="https://discord.gg/7yZqHfG"><img src="whitediscord.png" height="45" width="45"></a><a href="https://www.patreon.com/Astro_Bot"><img src="Digital-Patreon-Logo_White.png" height="45" width="45"></a>
-    <p><a href="privacy.html">Privacy Policy</a></p>
+<h2>Privacy Policy for <a href="/Astro/">Astro</a></h2>
+<br><br>
+<p>Astro Stores ABSOLUTELY no Data for more than a second.</p>
+<p>Both the kick and ban command store a users ID for about 1 second.</p>
+<p>From the moment you press enter when you kick/ban a user to when they actually get kicked/banned.</p>
+<p>Is the only time that an ID is stored.</p>
+<p>Other than that nothing is stored/recorded/or anything else.</p>
+<br>
+<p>Questions? DM me @isirk#0001</p>
 </center>
 </body>
 </html>
