--- a/lite/index.html
+++ b/lite/index.html
@@ -116,7 +116,7 @@
     <a href="/" style="text-decoration:none">Home</a></li>
     </li><a href="https://discordapp.com/oauth2/authorize?client_id=742894673965613146&scope=bot&permissions=8" style="text-decoration:none">Invite</a></li>
     <a href="https://discord.com/invite/s5ZPSRe" style="text-decoration:none">Support</a></li>
-    <a href="/privacy/" style="text-decoration:none">Privacy Policy</a></li>
+    <a href="/lite/privacy" style="text-decoration:none">Privacy Policy</a></li>
     </ul>
     <br><br>
     <p class="copyright" style="font-size: 20px;">Copyright © 2020 LiteBot All rights reserved.</p>
