Added New Button and Link

--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -25,9 +25,11 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<br><br><br><br>
+<br>
+<a href="/Astro">Back</a>
+<br><br><br>
 <center>
-<h2>Privacy Policy for <a href="/Astro/">Astro</a></h2>
+<h2>Privacy Policy for Astro</h2>
 <br><br>
 <p>Astro Stores ABSOLUTELY no Data for more than a second.</p>
 <p>Both the kick and ban command store a users ID for about 1 second.</p>
