--- a/Astro/index.html
+++ b/Astro/index.html
@@ -25,15 +25,14 @@
     }
     </style>
 <body link=white alink=white vlink=white></body>
-<br><br><br>
+<br><br>
 <center>
     <img src="ASTROYES.png" height="300" width="300">
     <h2>Astro</h2>
     <h3>A Utilities Discord Bot with reliability and simplicity</h3>
-    <p>This Bot is a Private Discord Bot but you can request Astro Bot for your server by DM'ing me @ isirk#0001</p>
-    <p>Or Joining Our <a href="https://discord.gg/7yZqHfG">Support Server</a></p>
+    <br>
     <a href="https://github.com/ISIRK/Astro"><img src="whitegithub.png" height="50" width="50"></a><a href="https://discord.gg/7yZqHfG"><img src="whitediscord.png" height="45" width="45"></a><a href="https://www.patreon.com/Astro_Bot"><img src="Digital-Patreon-Logo_White.png" height="45" width="45"></a>
-    <p><a href="/Astro/privacy/">Privacy Policy</a></p>
+    <p>Copyright © 2020 Astro All rights reserved.</p>
 </center>
 </body>
 </html>
