--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -26,7 +26,7 @@
     </style>
 <body link=white alink=white vlink=white></body>
 <br>
-<a href="/Astro">Back</a>
+<a href="/astro">Back</a>
 <br><br><br>
 <center>
 <h2>Privacy Policy for Astro</h2>
