--- a/about/index.html
+++ b/about/index.html
@@ -30,8 +30,8 @@
 <p>Hi! I'm Isaac,</p>
 <p>I am a freelance coder and gfx designer</p> 
 <p>I make discord bots, websites, gfx images and other stuff</p>
-<p>I made <a href="/lite/">LiteBot</a></p>
-<p>-You can see LiteBots listing <a href="https://discord.ly/lite">here</a></p>
+<p>I made <a href="/astro/">LiteBot</a></p>
+<p>-You can see LiteBot's listing <a href="https://discord.ly/lite">here</a></p>
 <p>-My <a href="https://discord.com/invite/s5ZPSRe">Discord Server</a></p>
 <p>-And My Discord Bio <a href="https://dsc.bio/isirk">here</a></p>
 <p>For Business either email me at isirk@asksirk.com or DM me on Discord at ISIRK#0001</p>
