--- a/lite/index.html
+++ b/lite/index.html
@@ -44,7 +44,8 @@
 <br><br><br><br><br><br><br><br><br><br>
 <center><h2>LiteBot</h2></center>
     <h1>LITEBOT IS BEING CANCELLED!</h1>
-    <h2>Please use <a href-"/Astro/">Instead</a></h2>
+    <h2>Please use <a href="/Astro/">Instead</a></h2>
+    </center>
 <br>
 <center><h3>Never Worry about anything except typing...</h3>
 <br>
