--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -31,13 +31,11 @@
 <center>
 <h2>Privacy Policy for Astro</h2>
 <br><br>
-<p>Astro Stores ABSOLUTELY no Data for more than a second.</p>
-<p>Both the kick and ban command store a users ID for about 1 second.</p>
-<p>From the moment you press enter when you kick/ban a user to when they actually get kicked/banned.</p>
-<p>Is the only time that an ID is stored.</p>
+<p>Astro strives to store not data to make astro as simple to use as possible</p>
+<p>The warn, kick, and ban commands store a users ID for about 1 second.</p>
 <p>Other than that nothing is stored/recorded/or anything else.</p>
 <br>
-<p>Questions? DM me @isirk#0001</p>
+<p>Questions? Either DM me @isirk#0001 on Discord, email me at isirk@asksirk.com, or join our <a href="https://discord.gg/7yZqHfG">Support Server.</a></p>
 </center>
 </body>
 </html>
