--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" 
     type="image/png" 
     href="ASTROYES.png">
-<title>Astro - A Utilities Bot for Discord</title>
+<title>Astro - Discord Bot</title>
 <meta name="description" content="Astro Bot - A Utilities Discord Bot with reliability and simplicity">
 </head>
 <body style="font-family: gamefont;">
@@ -16,7 +16,7 @@
 </style>
 <style>
     body {
-      background-color: #7289DA;
+      background-color: #5E6C86;
     }
   </style>
 <style>
