--- a/Astro/index.html
+++ b/Astro/index.html
@@ -3,9 +3,9 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="ASTROYES.png">
-<title>Astro - A Utilities Bot for Discord</title>
-<meta name="description" content="Astro Bot - A Utilities Discord Bot with reliability and simplicity">
+    href="astronautt.png">
+<title>Astro - Discord Bot</title>
+<meta name="description" content="Astro is a simple, easy to use, discord bot made to make your use of discord easy.">
 </head>
 <body style="font-family: gamefont;">
     <style>
@@ -16,7 +16,7 @@
 </style>
 <style>
     body {
-      background-color: #7289DA;
+      background-color: #5E6C86;
     }
   </style>
 <style>
@@ -27,10 +27,11 @@
 <body link=white alink=white vlink=white></body>
 <br><br>
 <center>
-    <img src="ASTROYES.png" height="300" width="300">
+    <img src="astronaut.jpg" height="300" width="300">
     <h2>Astro</h2>
-    <h3>A Utilities Discord Bot with reliability and simplicity</h3>
+    <h3>A simple, easy to use, discord bot made to make your use of discord easy.</h3>
     <br>
+    <a href="Astro/privacy/">Privacy Policy</a>
     <a href="https://github.com/ISIRK/Astro"><img src="whitegithub.png" height="50" width="50"></a><a href="https://discord.gg/7yZqHfG"><img src="whitediscord.png" height="45" width="45"></a><a href="https://www.patreon.com/Astro_Bot"><img src="Digital-Patreon-Logo_White.png" height="45" width="45"></a>
     <p>Copyright © 2020 Astro All rights reserved.</p>
 </center>
