--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -3,9 +3,9 @@
 <head>
     <link rel="icon" 
     type="image/png" 
-    href="ASTROYES.png">
+    href="astronautt.png">
 <title>Astro - Discord Bot</title>
-<meta name="description" content="Astro Bot - A Utilities Discord Bot with reliability and simplicity">
+<meta name="description" content="Astro is a simple, easy to use, discord bot made to make your use of discord easy.">
 </head>
 <body style="font-family: gamefont;">
     <style>
