--- a/Astro/index.html
+++ b/Astro/index.html
@@ -31,7 +31,7 @@
     <h2>Astro</h2>
     <h3>A simple, easy to use, discord bot made to make your use of discord easy.</h3>
     
-    <a href="Astro/privacy/">Privacy Policy</a>
+    <a href="https://asksirk.com/Astro/privacy/">Privacy Policy</a>
     <br><br>
     <a href="https://github.com/ISIRK/Astro"><img src="whitegithub.png" height="50" width="50"></a><a href="https://discord.gg/7yZqHfG"><img src="whitediscord.png" height="45" width="45"></a><a href="https://www.patreon.com/Astro_Bot"><img src="Digital-Patreon-Logo_White.png" height="45" width="45"></a>
     <p>Copyright © 2020 Astro All rights reserved.</p>
