--- a/Astro/index.html
+++ b/Astro/index.html
@@ -31,6 +31,7 @@
     <h2>Astro</h2>
     <h3>A simple, easy to use, discord bot made to make your use of discord easy.</h3>
     
+    <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&redirect_uri=https%3A%2F%2Fastrobot.carrd.co%2F&response_type=code&scope=bot%20identify">Invite</a>
     <a href="https://asksirk.com/Astro/privacy/">Privacy Policy</a>
     <br><br>
     <a href="https://github.com/ISIRK/Astro"><img src="whitegithub.png" height="50" width="50"></a><a href="https://discord.gg/7yZqHfG"><img src="whitediscord.png" height="45" width="45"></a><a href="https://www.patreon.com/Astro_Bot"><img src="Digital-Patreon-Logo_White.png" height="45" width="45"></a>
