--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -4,8 +4,8 @@
     <link rel="icon" 
     type="image/png" 
     href="astronautt.png">
-<title>Astro - Discord Bot</title>
-<meta name="description" content="Astro is a simple, easy to use, discord bot made to make your use of discord easy.">
+<title>Privacy Policy for Astro</title>
+<meta name="description" content="Privacy Policy for Astro">
 </head>
 <body style="font-family: gamefont;">
     <style>
