--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -31,7 +31,7 @@
 <center>
 <h2>Privacy Policy for Astro</h2>
 <br><br>
-<p>Astro strives to store not data to make astro as simple to use as possible</p>
+<p>Astro strives to store no data to make astro as simple to use as possible</p>
 <p>The warn, kick, and ban commands store a users ID for about 1 second.</p>
 <p>Other than that nothing is stored/recorded/or anything else.</p>
 <br>
