--- a/Astro/privacy/index.html
+++ b/Astro/privacy/index.html
@@ -31,9 +31,8 @@
 <center>
 <h2>Privacy Policy for Astro</h2>
 <br><br>
-<p>Astro strives to store no data to make astro as simple to use as possible</p>
-<p>The warn, kick, and ban commands store a users ID for about 1 second.</p>
-<p>Other than that nothing is stored/recorded/or anything else.</p>
+<p>Astro strives to store no data to make astro as simple to use as possible.</p>
+<p>Nothing is, was, or ever will be stored without/recorded or anything else.</p>
 <br>
 <p>Questions? Either DM me @isirk#0001 on Discord, email me at isirk@asksirk.com, or join our <a href="https://discord.gg/7yZqHfG">Support Server.</a></p>
 </center>
