--- a/Astro/invite.html
+++ b/Astro/invite.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; url='https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&redirect_uri=https%3A%2F%2Fastrobot.carrd.co%2F&response_type=code&scope=bot%20identify'" />
-  </head>
-  <body>
-    <p>Please follow <a href="https://discord.com/oauth2/authorize?client_id=751447995270168586&permissions=268823638&redirect_uri=https%3A%2F%2Fastrobot.carrd.co%2F&response_type=code&scope=bot%20identify">this link</a>.</p>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Support - Astro</title>
+  <style type="text/css">.body{background-colour:#000000;color:#ffffff;}a{color: #ffffff;}</style>
+  <meta HTTP-EQUIV="REFRESH" content="0; url=https://discord.gg/7yZqHfG">
+  <link rel="canonical" href="https://discord.gg/7yZqHfG" />
+  <meta name="description" content="Join the support server for Astro">
+  <meta name="keywords" content="Astro, discord, bot, server, guild, invite">
+  <meta name="msapplication-TileColor" content="#307EC4">
+  <meta content="https://asksirk.com/Astro/astronaut.jpg" property="og:image">
+</head>
+<body>
+  <a href="https://discord.gg/7yZqHfG">Click here if you are not redirected automatically.</a></body>
 </html>
