--- a/Astro/invite.html
+++ b/Astro/invite.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Support - Astro</title>
+  <meta HTTP-EQUIV="REFRESH" content="0; url=https://discord.gg/7yZqHfG">
   <link rel="canonical" href="https://discord.gg/7yZqHfG" />
   <meta name="description" content="Join the support server for Astro">
   <meta name="keywords" content="Astro, discord, bot, server, guild, invite">
